--- a/index.html
+++ b/index.html
@@ -261,6 +261,12 @@
    <h2><font color="black">faire des économies ?</font></h2>
 </div>
     
+<div id="step-criteres-16" class="step green"
+   data-x="151529" data-y="-100000" data-z="915" data-rotate-x="20" data-rotate-y="0" data-scale="50.2">
+   <h2><font color="black">1. coûts de mise en place</font></h2>
+</div>
+
+    
 
 <!--
 <div id="step-intro-7" class="step white"
